@@ -1,80 +1,73 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/netboot-controller.sh,v 1.7 2005/11/30 21:34:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/netboot-controller.sh,v 1.8 2005/12/19 15:03:25 wolf31o2 Exp $
+
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
 
 case ${1} in
-
 	#### Couldnt busybox step be in packages ....
-
 	build_packages)
 		shift
 		clst_root_path="/" \
 		clst_packages="$*" \
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+		exec_in_chroot \
+		${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
 	;;
-
 	busybox)
 		# Custom busybox config support
 		if [ -f "${clst_netboot_busybox_config}" ]
 		then
 			mkdir -p ${clst_chroot_path}/etc/busybox/${clst_CHOST}
-			cp -v ${clst_netboot_busybox_config} ${clst_chroot_path}/etc/busybox/${clst_CHOST}/busybox.config
+			cp -v ${clst_netboot_busybox_config} \
+				${clst_chroot_path}/etc/busybox/${clst_CHOST}/busybox.config
 			clst_use="savedconfig" 
 		fi
-		
+
 		# Main Busybox emerge
 		clst_root_path="/" \
 		clst_use="${clst_use} netboot" \
 		clst_myemergeopts="${clst_myemergeopts} -O" \
 		clst_packages="busybox" \
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+		exec_in_chroot \
+		${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
 	;;
-
-		pre-kmerge)
-				# Sets up the build environment before any kernels are compiled
-				#exec_in_chroot ${clst_sharedir}/targets/support/pre-kmerge.sh
-				;;
-		post-kmerge)
-				# Cleans up the build environment after the kernels are compiled
-				#exec_in_chroot ${clst_sharedir}/targets/support/post-kmerge.sh
-				;;
-
+	pre-kmerge)
+		# Sets up the build environment before any kernels are compiled
+		#exec_in_chroot ${clst_sharedir}/targets/support/pre-kmerge.sh
+	;;
+	post-kmerge)
+		# Cleans up the build environment after the kernels are compiled
+		#exec_in_chroot ${clst_sharedir}/targets/support/post-kmerge.sh
+	;;
 	kernel)
 		shift
-				export clst_kname="$1"
+		export clst_kname="$1"
 		export clst_root_path="/"
-				#exec_in_chroot ${clst_sharedir}/targets/support/pre-kmerge.sh
-				#exec_in_chroot ${clst_sharedir}/targets/support/kmerge.sh
-				#exec_in_chroot ${clst_sharedir}/targets/support/post-kmerge.sh
+		#exec_in_chroot ${clst_sharedir}/targets/support/pre-kmerge.sh
+		#exec_in_chroot ${clst_sharedir}/targets/support/kmerge.sh
+		#exec_in_chroot ${clst_sharedir}/targets/support/post-kmerge.sh
 		#extract_kernels kernels
-		
 	;;
-
 	image)
 		#Creates the base initrd image for the netboot
-
 		shift
-
-		# Could this step be a parameter in case there is a different baselayout to add???
+		# Could this step be a parameter in case there is a different
+		# baselayout to add???
 		clst_myemergeopts="${clst_myemergeopts} --nodeps" \
 		clst_packages="netboot-base" \
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
-		
+		exec_in_chroot \
+		${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+
 		clst_files="${@}" \
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-image.sh
+		exec_in_chroot \
+		${clst_sharedir}/targets/${clst_target}/${clst_target}-image.sh
 	;;
-
 	finish)
-	
-
-		
 		${clst_sharedir}/targets/${clst_target}/${clst_target}-combine.sh
 	;;
-
 	clean)
 		exit 0;;
 	*)
